[spv2] Do not manage effect node render surfaces from blink

Render surface determination will happen on the compositor thread so we
will not need to make that decision in blink/PaintArtifactCompositor.
This patch switches PaintArtifactCompositor to not set the render
surface bit on effect nodes.

With this patch, test failures with spv2 and layer lists [1] are reduced
from 1103 to 16. No new tests are included in this patch but this brings
us very close to being able to turn on --enable-layer-lists by default
for spv2.

[1] --additional-drt-flag=--enable-slimming-paint-v2 --additional-drt-flag=--enable-layer-lists

BUG=635691
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2230723004
Cr-Commit-Position: refs/heads/master@{#411248}